# RAS-2016

./: README.md  ras_utils.rosinstall
UArmForROS/: CMakeLists.txt  README.md
UArmForROS/python/ros_kth_uarm/: kth_uarm.py  test_calibration.yaml
UArmForROS/scripts/: kth_uarm_core.py
ras_brain/: CMakeLists.txt  package.xml
ras_brain/action/: GoToLocation.action
ras_brain/launch/: brian.launch  jared.launch
ras_brain/src/: brain.cpp
ras_brain/srv/: AddPose.srv
ras_color_calibration/: CMakeLists.txt  package.xml
ras_color_calibration/src/: color_calibration.cpp
ras_color_detection/: README.md  package.xml
ras_color_detection/launch/: color_detection.launch
ras_color_detection/result/: Star.txt  ball.txt  cube.txt  hollow.txt  objectlist.txt  triangle.txt
ras_color_detection/script/: set_camera_params.sh
ras_color_detection/src/: Cubehollow.pcd  Cubehollow1.pcd  Cubehollow2.pcd  color_detection_node.cpp
ras_espeak/: CMakeLists.txt  README.md
ras_follower/: CMakeLists.txt  package.xml
ras_follower/action/: FollowLine.action
ras_follower/launch/: histtest.launch  test.launch
ras_follower/srv/: Rotate.srv  moveTo.srv
ras_follower/test/: histogramTest.cpp
ras_lab1/ras_lab1/: CMakeLists.txt
ras_lab1/ras_lab1_distance_sensor/src/: generate_distance_node.cpp
ras_lab1/ras_lab1_launch/config/: lab1.rviz
ras_lab1/ras_lab1_world/: CMakeLists.txt  package.xml
ras_lab1/ras_lab1_world/src/: world_main.cpp
ras_lab1_controllers/ras_lab1_cartesian_controllers/: CMakeLists.txt  package.xml
ras_lab1_controllers/ras_lab1_cartesian_controllers/config/: params.yaml
ras_lab1_controllers/ras_lab1_cartesian_controllers/launch/: wallfollow.launch
ras_lab1_controllers/ras_lab1_cartesian_controllers/src/: circle_cartesian_controller.cpp  line_cartesian_controller.cpp  wall_following_controller.cpp
ras_lab1_controllers/ras_lab1_controllers/: CMakeLists.txt  package.xml
ras_lab1_controllers/ras_lab1_motor_controller/: CMakeLists.txt  package.xml
ras_lab1_controllers/ras_lab1_motor_controller/config/: params.yaml
ras_lab1_controllers/ras_lab1_motor_controller/launch/: motor_control.launch
ras_lab1_controllers/ras_lab1_motor_controller/src/: motor_controller.cpp
ras_lab1_controllers/ras_lab1_open_loop_control/: CMakeLists.txt  package.xml
ras_lab1_controllers/ras_lab1_open_loop_control/config/: params.yaml
ras_lab1_controllers/ras_lab1_open_loop_control/launch/: open_loop.launch
ras_lab1_controllers/ras_lab1_open_loop_control/src/: open_loop_controller.cpp
ras_lab1_ds_calib/: CMakeLists.txt  package.xml
ras_lab1_ds_calib/config/: params.yaml
ras_lab1_ds_calib/launch/: ds_calib.launch
ras_lab1_ds_calib/src/: distance_sensor_calib_node.cpp
ras_localization/: 2016-11-16-11-15-54.bag  CMakeLists.txt  package.xml
ras_localization/launch/: david.launch  davidMov.launch  playbag.launch  tracking.launch
ras_localization/src/: localization.cpp
ras_mapping/: CMakeLists.txt  README.md  package.xml
ras_mapping/launch/: test.launch
ras_mapping/src/: map_builder.cpp
ras_mapping/srv/: line.srv  point.srv
ras_maze/: README.md
ras_maze/ras_maze_distance_sensor/: CMakeLists.txt  README.md
ras_maze/ras_maze_distance_sensor/launch/: distance_sensor.launch
ras_maze/ras_maze_distance_sensor/src/: generate_distance_node.cpp
ras_maze/ras_maze_launch/: CMakeLists.txt  README.md  package.xml
ras_maze/ras_maze_launch/config/: maze.rviz
ras_maze/ras_maze_launch/launch/: kobuki_maze.launch  maze_visualize.launch  static_tf.launch
ras_maze/ras_maze_map/maps/: contest_maze.txt  (+2 more)
ras_msgs/: package.xml
ras_msgs/msg/: RAS_Evidence.msg
ras_object_detection/: CMakeLists.txt  package.xml
ras_object_detection/src/: object.cpp  ras_object_detection_node.cpp
ras_object_heuristic/: CMakeLists.txt  package.xml
ras_object_heuristic/src/: object_heuristic.cpp
ras_object_heuristic/srv/: PopObject.srv
ras_object_list/: CMakeLists.txt  package.xml
ras_object_list/launch/: object_list.launch.xml  ras_object_list.launch
ras_object_list/src/: ras_object_list.cpp
ras_object_list/srv/: PopObject.srv
ras_occupancy_grid/: CMakeLists.txt  package.xml
ras_occupancy_grid/src/: occupancy_grid.cpp
ras_odometry/: CMakeLists.txt  package.xml
ras_path_plan/: CMakeLists.txt  README.md  package.xml
ras_path_plan/launch/: path_plan.launch
ras_path_plan/src/: path_planner.cpp  sets.cpp
ras_path_plan/srv/: path_srv.srv
ras_phidget/: CMakeLists.txt
ras_phidget/src/: motor.cpp
ras_point_rotation/: CMakeLists.txt  package.xml
ras_point_rotation/src/: ras_point_rotation_node.cpp
ras_qrcode_detection/: CMakeLists.txt  package.xml
ras_qrcode_detection/launch/: testing.launch
ras_qrcode_detection/src/: ras_qrcode_detection_node.cpp
ras_robot8_launch/: CMakeLists.txt  README.md  package.xml
ras_robot8_launch/launch/: milestone1.launch  milestone2.launch  milestone3.launch  visp-test.launch
ras_speaker/: CMakeLists.txt  package.xml
ras_speaker/src/: robot_talk.cpp  robot_talk_test.cpp
ras_target_recognition/: CMakeLists.txt  package.xml
ras_target_recognition/msg/: Line.msg
ras_target_recognition/src/: cube_contours.txt  object.cpp  target_recognition.cpp
ras_tf_broadcasters/ras_tf_broadcasters/: CMakeLists.txt  package.xml
ras_tf_broadcasters/robot8_camera_broadcaster/: CMakeLists.txt  package.xml
ras_tf_broadcasters/robot8_laser_broadcaster/: CMakeLists.txt  package.xml
ras_tf_broadcasters/robot8_pose_broadcaster/: CMakeLists.txt  package.xml
ras_tf_broadcasters/robot8_uarm_broadcaster/: CMakeLists.txt  package.xml
ras_uarm_controller/: CMakeLists.txt  package.xml
ras_uarm_controller/src/: uarm_controller.cpp
ras_uarm_controller/srv/: Put.srv
ras_visp_auto_tracker/config/: model.cfg
ras_vornoi_builder/: CMakeLists.txt  package.xml
ras_vornoi_builder/launch/: vornoi_visualize.launch
ras_vornoi_builder/src/: vornoi.cpp
robotgroup8_motor_controller/: CMakeLists.txt  package.xml
robotgroup8_motor_controller/launch/: paramtester.launch
robotgroup8_motor_controller/src/: motor_controller.cpp
(+8 files in other folders)
