<package>
 <name>ras_maze_launch</name>
  <version>0.1.0</version>
  <description>
    Launch files for RAS lab1.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ras_lab1_launch</url>

  <author email="raambrus@kth.se">Rares Ambrus</author>
  <maintainer email="raambrus@kth.se">Rares Ambrus</maintainer>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>ras_maze_distance_sensor</run_depend>
  <run_depend>ras_maze_map</run_depend>

</package>
